# Vig_Project_personel

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_PLAN.md  CURRENT_STATUS.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  Makefile  PERFORMANCE_ANALYSIS.md  PROJECT_STRUCTURE.md  PR_INFO.md  README.md  TESTING.md  VERIFICATION_REPORT.md  Vig_Project.txt  WEEK1_PLAN.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_verification.txt
.claude/commands/: analyze-architecture.md  api-test.md  code-quality.md  dt-simulate.md  fix-issue.md  integration-check.md  perf-analyze.md  rl-debug.md  run-tests.md  vision-test.md
.github/workflows/: ci-cd.yaml
deploy/docker/: Dockerfile.api
deployment/: README.md  default.conf  nginx.conf
deployment/k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
scripts/: demo_rl_scheduler.py  download_mvtec.py  export_onnx.py  run_digital_twin_simulation.py  run_scheduling_demo.py  test_setup.py  train_baseline.py  train_predictive_models.py  train_rl_scheduler.py
src/api/: main.py  main_integrated.py
src/core/: config.py  constants.py  exceptions.py  logging.py
tests/: conftest.py  test_e2e_critical_scenario.py  test_e2e_simulation.py  test_e2e_standalone.py  test_integration_e2e.py  test_rl_scheduling.py
(+79 files in other folders)
